--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
 
   <header>
-    <img src="2.jpg" alt="Your Photo">
+   <img src="./photo.jpg" alt="Aniga" width="400">
     <h1>Mohamed Abdullahi Ibrahim</h1>
     <p>Software Engineer | Full-Stack Developer | Innovator</p>
   </header>
@@ -153,4 +153,5 @@
   </footer>
 
 </body>
+
 </html>
