--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 <body>
 
   <header>
-   <img src="./photo.jpg" alt="Aniga" width="400">
+  <img src="./photo.jpg" alt="Aniga"
+     style="display:block; margin:40px 0 0 20px; width:200px; border-radius:50%; border:5px solid #00bfff;">
     <h1>Mohamed Abdullahi Ibrahim</h1>
     <p>Software Engineer | Full-Stack Developer | Innovator</p>
   </header>
@@ -155,3 +156,4 @@
 </body>
 
 </html>
+
