--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <header>
   <img src="./photo.jpg" alt="Aniga"
-     style="display:block; margin:40px 0 0 20px; width:200px; border-radius:50%; border:5px solid #00bfff;">
+     style="display:block; margin:60px 20px 20px 40px; width:200px; border-radius:50%; border:5px solid #00bfff;">
     <h1>Mohamed Abdullahi Ibrahim</h1>
     <p>Software Engineer | Full-Stack Developer | Innovator</p>
   </header>
@@ -156,4 +156,5 @@
 </body>
 
 </html>
+
 
