--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <header>
   <img src="./photo.jpg" alt="Aniga"
-     style="display:block; margin:60px 20px 20px 40px; width:200px; border-radius:50%; border:5px solid #00bfff;">
+     style="display:block; margin:40px 0px 0px 20px; width:200px; border-radius:50%; border:5px solid #00bfff;">
     <h1>Mohamed Abdullahi Ibrahim</h1>
     <p>Software Engineer | Full-Stack Developer | Innovator</p>
   </header>
@@ -149,12 +149,13 @@
   </section>
   
   <footer>
-    <p>📧 Email: <a href="mailto:youremail@gmail.com">youremail@gmail.com</a> | 🌐 GitHub: <a href="#">github.com/yourusername</a></p>
+    <p>📧 Email: <a href="mailto:mahamedabdilahi@gmail.com">mahamedabdilahi99@gmail.com</a> | 🌐 GitHub: <a href="#">github.com/yourusername</a></p>
     <p>© 2025 Mohamed Abdullahi Ibrahim</p>
   </footer>
 
 </body>
 
 </html>
+
 
 
