--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
 <body>
 
   <header>
-  <img src="./photo.jpg" alt="Aniga"
-     style="display:block; margin:40px 0px 0px 20px; width:200px; border-radius:50%; border:5px solid #00bfff;">
+ <img src="./photo.jpg" alt="Aniga" width="400">
     <h1>Mohamed Abdullahi Ibrahim</h1>
     <p>Software Engineer | Full-Stack Developer | Innovator</p>
   </header>
@@ -156,6 +155,7 @@
 </body>
 
 </html>
+
 
 
 
