--- a/index.html
+++ b/index.html
@@ -148,13 +148,14 @@
   </section>
   
   <footer>
-    <p>📧 Email: <a href="mailto:mahamedabdilahi@gmail.com">mahamedabdilahi99@gmail.com</a> | 🌐 GitHub: <a href="#">github.com/yourusername</a></p>
+    <p>📧 Email: <a href="mailto:mahamedabdilahi@gmail.com">mahamedabdilahi99@gmail.com</a> | 🌐 GitHub: <a href="#">github.com/indho4088</a></p>
     <p>© 2025 Mohamed Abdullahi Ibrahim</p>
   </footer>
 
 </body>
 
 </html>
+
 
 
 
